--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -11,6 +11,7 @@ $color-red: #DA100B;
 $color-grey: #9C9C9C;
 $color-light-grey: #EBF0F3;
 $color-dark-grey: #272727;
+$color-green: #11933B;
 $color-white: #FFFFFF;
 
 // Sizes
