--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -35,7 +35,7 @@ html
             li.nav-item
               = link_to 'Posts', posts_path, class: 'nav-link'
             li.nav-item
-              = link_to 'Map', root_path, class: 'nav-link'
+              = link_to 'Map', maps_path, class: 'nav-link'
             li.nav-item
               = link_to 'Videos', videos_user_video_path(current_user.username), class: 'nav-link'
               
