--- a/app/views/maps/index.slim
+++ b/app/views/maps/index.slim
@@ -1,1 +1,10 @@
-h5 Map
+#map
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXWns0NrAoztlUcajCSX19-DxGmRCU1KE&libraries=&v=weekly" async></script>
+
+.map-switcher-wrapper
+  = form_for @location_setting, url: setting_path(@location_setting, redirect_path: 'map'), method: :patch do |f|
+    label.switch
+      = f.check_box :is_current_location
+      span.slider.default.round
+      
+    span.ml-2 Show current location
