--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -54,6 +54,7 @@ $grid-breakpoints: (
 @import './events/index';
 @import './squad_requests/index';
 @import './groups/index';
+@import './maps/index';
 
 /**************************************
 * Import stylesheets from node modules:
