Add Stream#index styles for Web

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -55,6 +55,7 @@ $grid-breakpoints: (
 @import './squad_requests/index';
 @import './groups/index';
 @import './maps/index';
+@import './streams/index';
 
 /**************************************
 * Import stylesheets from node modules:
