--- a/app/webpack/stylesheets/icons.scss
+++ b/app/webpack/stylesheets/icons.scss
@@ -1,5 +1,5 @@
 // Panel with Lit, View, Comment icons
-.info-panel, .post-info-panel {
+.info-panel, .post-info-panel, .stream-info-panel {
   display: inline-flex;
   align-items: center;
   position: absolute;
