--- a/app/views/stream_comments/_form.slim
+++ b/app/views/stream_comments/_form.slim
@@ -1,4 +1,4 @@
-= form_for new_comment do |f|
+= form_for new_comment, url: stream_stream_comments_path(new_comment.stream), remote: true do |f|
   
   .input-group.mb-3
     = f.text_field :message, autofocus: false, autocomplete: 'off', placeholder: "Write a comment", class: 'form-control'
