Add script that create AWSMediaLive Channel with input

--- a/app/views/streams/index.slim
+++ b/app/views/streams/index.slim
@@ -1,4 +1,8 @@
-.streams-wrapper.my-4
+<video width="352" height="198" controls>
+  <source src="https://d3i4cb8byzw70h.cloudfront.net/access-token-1/index.m3u8" type="application/x-mpegURL">
+</video>
+
+//.streams-wrapper.my-4
   .streams-cards-wrapper
     - @streams.each do |stream|
       .streams-card value="#{stream.id}"
