--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -41,7 +41,7 @@ html
             li.nav-item
               = link_to 'Videos', videos_user_video_path(current_user.username), class: 'nav-link'
             li.nav-item
-              = link_to 'Streams', streams_path, class: 'nav-link'
+              //= link_to 'Streams', streams_path, class: 'nav-link'
               
           - else
             li.nav-item
