Add Username above marker on GoogleMap

--- a/app/webpack/stylesheets/maps/index.scss
+++ b/app/webpack/stylesheets/maps/index.scss
@@ -74,4 +74,12 @@
     left: 10px;
     bottom: -5px;
   }
+  
+  .map-username {
+    position: absolute;
+    top: -14px;
+    width: 32px;
+    display: flex;
+    justify-content: center;
+  }
 }
