--- a/app/views/streams/index.slim
+++ b/app/views/streams/index.slim
@@ -1,5 +1,5 @@
 <video width="352" height="198" controls>
-  <source src="https://d3i4cb8byzw70h.cloudfront.net/access-token-1/index.m3u8" type="application/x-mpegURL">
+  <source src="https://d3i4cb8byzw70h.cloudfront.net/stream/index.m3u8" type="application/x-mpegURL">
 </video>
 
 //.streams-wrapper.my-4
