--- a/app/views/streams/_show.slim
+++ b/app/views/streams/_show.slim
@@ -11,9 +11,18 @@
         span #{stream.owner.full_name}
         span #{comment_timestamp(stream.created_at)}
   
-  - if stream.image.present?
-    .full-image-wrapper
-      = image_tag(stream.image.url, class: '', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
+  - if stream.status == 'in-progress'
+    <video width="100%" height="300px" controls>
+      <source src="https://d3i4cb8byzw70h.cloudfront.net/stream/index.m3u8" type="application/x-mpegURL">
+    </video>
+    
+  - if stream.video.present?
+    <video width="100%" height="300px" controls>
+      <source src="#{stream.video.url}">
+    </video>
+    
+  - elsif stream.image.present?
+    = image_tag(stream.image.url, class: '', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
   - else
     = image_pack_tag('media/images/placeholders/placeholder-news.png', class: 'url-full-image')
     
