--- a/app/views/streams/_show.slim
+++ b/app/views/streams/_show.slim
@@ -30,10 +30,11 @@
     .info-actions
       .div class="info-panel-value-wrapper"
         - if stream.is_lited(current_user)
-          = link_to '', method: :delete, remote: true, id: "stream-lit-#{stream.id}" do
+        
+          = link_to stream_stream_lits_path(stream_access_token: stream.access_token), method: :delete, remote: true, id: "stream-lit-#{stream.id}" do
             i.ic.lit.reverse.active
         - else
-          = link_to '', method: :stream, remote: true, id: "stream-lit-#{stream.id}" do
+          = link_to stream_stream_lits_path(stream_access_token: stream.access_token), method: :post, remote: true, id: "stream-lit-#{stream.id}" do
             i.ic.lit.reverse
             
         span.info-panel-value.color-black #{counter_measurement(stream.lits.size)}
