--- a/app/views/streams/index.slim
+++ b/app/views/streams/index.slim
@@ -35,10 +35,10 @@
           .stream-info-panel
             .div class="info-panel-value-wrapper"
               - if stream.is_lited(current_user)
-                = link_to '', method: :delete, remote: true, id: "stream-lit-#{stream.id}" do
+                = link_to stream_stream_lits_path(stream_access_token: stream.access_token), method: :delete, remote: true, id: "stream-lit-#{stream.id}" do
                   i.ic.lit.active
               - else
-                = link_to '', method: :stream, remote: true, id: "stream-lit-#{stream.id}" do
+                = link_to stream_stream_lits_path(stream_access_token: stream.access_token), method: :post, remote: true, id: "stream-lit-#{stream.id}" do
                   i.ic.lit
                   
               span.info-panel-value #{counter_measurement(stream.lits.size)}
