--- a/app/views/streams/_show.slim
+++ b/app/views/streams/_show.slim
@@ -17,9 +17,8 @@
     </video>
     
   - if stream.video.url.present?
-    <video width="100%" height="300px" controls>
-      <source src="#{stream.video.url}">
-    </video>
+    video controls="" height="500px" width="100%"
+      source src="#{stream.video.url}"
     
   - elsif stream.image.present?
     = image_tag(stream.image.url, class: '', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
