--- a/app/views/streams/_show.slim
+++ b/app/views/streams/_show.slim
@@ -20,7 +20,7 @@
         | To view this video please enable JavaScript, and consider upgrading to a
         | web browser that
     
-  - if stream.video.url.present?
+  - elsif stream.video.url.present?
     video#my-video.video-js.vjs-default-skin.vjs-16-9.vjs-big-play-centered controls="" data-setup="{}"  poster="#{stream.image.url}" preload="auto"
       source src="#{stream.video.url}" type="video/mp4"
       p.vjs-no-js
