--- a/app/views/chats/chat_members/_change_member_role.slim
+++ b/app/views/chats/chat_members/_change_member_role.slim
@@ -6,8 +6,8 @@
     .chat-member-card
       .photo
         = link_to user_path(chat_membership.user.username), target: :_blank, data: { type: 'modal-link' } do
-          - if chat_membership.user.profile_picture&.url
-            = image_tag(chat_membership.user.profile_picture.square_320.url, class: 'profile-image')
+          - if chat_membership.user.profile_picture_url
+            = image_tag(chat_membership.user.profile_picture_url, class: 'profile-image')
           - else
             = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
           
