--- a/app/views/chats/chat_members/_list.slim
+++ b/app/views/chats/chat_members/_list.slim
@@ -8,8 +8,8 @@
       .chat-member-card
         .photo
           = link_to user_path(user.username), target: :_blank, data: { type: 'modal-link' } do
-            - if user.profile_picture&.url
-              = image_tag(user.profile_picture.square_320.url, class: 'profile-image')
+            - if user.profile_picture_url
+              = image_tag(user.profile_picture_url, class: 'profile-image')
             - else
               = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
             
