--- a/app/views/groups/_comments_list.slim
+++ b/app/views/groups/_comments_list.slim
@@ -7,8 +7,8 @@
         = link_to comment.source.title, post_post_comments_path(comment.source)
     .subscription-content-wrapper
       = link_to user_path(comment.user.username) do
-        - if comment.user.profile_picture.url
-          = image_tag(comment.user.profile_picture.square_320.url, class: 'profile-image')
+        - if comment.user.profile_picture_url
+          = image_tag(comment.user.profile_picture_url, class: 'profile-image')
         - else
           = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
           
