--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -101,8 +101,8 @@ html
                 
             .d-inline-flex.ml-1
               = link_to user_path(current_user.username) do
-                - if current_user.profile_picture.present?
-                  = image_tag(current_user.profile_picture.square_320.url, class: 'profile-image')
+                - if current_user.profile_picture_url.present?
+                  = image_tag(current_user.profile_picture_url, class: 'profile-image')
                 - else
                   = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
         - else
