--- a/app/views/posts/_show.slim
+++ b/app/views/posts/_show.slim
@@ -2,8 +2,8 @@
   .post-info-wrapper
     .user-info-wrapper
       = link_to user_path(post.user.username) do
-        - if post.user.profile_picture.url
-          = image_tag(post.user.profile_picture.square_320.url, class: 'profile-image')
+        - if post.user.profile_picture_url
+          = image_tag(post.user.profile_picture_url, class: 'profile-image')
         - else
           = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
           
