--- a/app/views/streams/_show.slim
+++ b/app/views/streams/_show.slim
@@ -2,8 +2,8 @@
   .stream-info-wrapper
     .user-info-wrapper
       = link_to user_path(stream.owner.username) do
-        - if stream.owner.profile_picture.url
-          = image_tag(stream.owner.profile_picture.square_320.url, class: 'profile-image')
+        - if stream.owner.profile_picture_url
+          = image_tag(stream.owner.profile_picture_url, class: 'profile-image')
         - else
           = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
           
