--- a/app/views/streams/_show.slim
+++ b/app/views/streams/_show.slim
@@ -13,7 +13,7 @@
   
   - if stream.status == 'in-progress'
   
-    video#my-video.video-js.vjs-default-skin.vjs-16-9.vjs-big-play-centered controls="" data-setup="{}" height="500px" poster="#{stream.image.url}" preload="auto" width="100%"
+    video#my-video.video-js.vjs-default-skin.vjs-16-9.vjs-big-play-centered controls="" data-setup="{}" height="500px" poster="#{stream.image_url}" preload="auto" width="100%"
       source src="#{stream.stream_url}" type="application/x-mpegURL"
       
       p.vjs-no-js
@@ -21,7 +21,7 @@
         | web browser that
     
   - elsif stream.video.attached?
-    video#my-video.video-js.vjs-default-skin.vjs-16-9.vjs-big-play-centered controls="" data-setup="{}"  poster="#{stream.image.url}" preload="auto"
+    video#my-video.video-js.vjs-default-skin.vjs-16-9.vjs-big-play-centered controls="" data-setup="{}"  poster="#{stream.image_url}" preload="auto"
       source src="#{stream.video_url}" type="video/mp4"
       p.vjs-no-js
         | To view this video please enable JavaScript, and consider upgrading to a
