--- a/app/views/posts/_show.slim
+++ b/app/views/posts/_show.slim
@@ -14,9 +14,9 @@
     - if !post.is_approved
       p.post-status On approve
   
-  - if post.image.present?
+  - if post.image_url.present?
     .full-image-wrapper
-      = image_tag(post.image.url, class: '', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
+      = image_tag(post.image_url, class: '', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
   - else
     = image_pack_tag('media/images/placeholders/placeholder-news.png', class: 'url-full-image')
     
