--- a/app/views/posts/_user_images_form.slim
+++ b/app/views/posts/_user_images_form.slim
@@ -2,6 +2,6 @@
   - if @user_images.present?
     - @user_images.each do |image|
       .image-card
-        = image_tag(image.file.rectangle_160_160.url, data: {'image-url': image.file.url, 'image-id': image.id })
+        = image_tag(image.file_160_160_url, data: {'image-url': image.file.url, 'image-id': image.id })
   - else
     = link_to 'Your image library is empty', images_user_image_path(current_user.username)
