--- a/app/views/user_images/_form.slim
+++ b/app/views/user_images/_form.slim
@@ -1,5 +1,5 @@
-= direct_upload_form_for @image_uploader do |f|
-  = f.file_field :image, accept: 'image/png, image/jpeg, image/jpg', class: 'upload-user-asset'
+= form_for @image_uploader do |f|
+  = f.file_field :file, direct_upload: true, accept: 'image/png, image/jpeg, image/jpg', class: 'upload-user-asset'
   
   #container-floating-wrapper
     #container-floating
@@ -10,6 +10,6 @@
       //#floating-button
         //p.plus #{image_pack_tag('media/images/icons/ic_plus.png')} Add Image
       
-      = f.label :image do
+      = f.label :file do
         #floating-button
           p.plus #{image_pack_tag('media/images/icons/ic_plus.png')} Add Image
