--- a/app/views/chat_messages/assets/_form_images.slim
+++ b/app/views/chat_messages/assets/_form_images.slim
@@ -2,7 +2,7 @@
   - if chat_images.present?
     - chat_images.each do |image|
       .image-card
-        = image_tag(image.file.rectangle_160_160.url, data: {'image-url': image.file.url, 'image-id': image.id })
+        = image_tag(image.file_160_160_url, data: {'image-url': image.file.url, 'image-id': image.id })
   - else
     = link_to 'Your image library is empty', images_user_image_path(current_user.username)
 
