--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -120,7 +120,7 @@
       .user-profile-assets
         - @videos.each do |user_video|
           .image-wrapper.video
-            = image_tag(user_video.file.thumb.url, class: 'user-asset', data: { 'video-id': user_video.id, 'video-url': user_video.file.url })
+            = image_tag(user_video.file_thumbnail_url, class: 'user-asset', data: { 'video-id': user_video.id, 'video-url': user_video.file_url })
     - elsif @user == current_user
       .new-assets
         = link_to 'Your video library is empty', videos_user_video_path(@user.username)
