--- a/app/views/user_videos/videos.slim
+++ b/app/views/user_videos/videos.slim
@@ -2,10 +2,10 @@
   .user-profile-assets.full-list
     - @videos.each do |user_video|
       .image-wrapper.custom-size.video
-        - if user_video.file.present?
-          = image_tag(user_video.file.thumb.url, class: 'user-asset video', data: { 'video-url': user_video.file.url, 'video-loaded': user_video.file.present?, 'video-id': user_video.id })
+        - if user_video.file_url.present?
+          = image_tag(user_video.file_thumbnail_url, class: 'user-asset video', data: { 'video-url': user_video.file_url, 'video-loaded': user_video.file_url.present?, 'video-id': user_video.id })
         - else
-          = image_tag(user_video.file.url, class: 'user-asset video', data: { 'video-loaded': user_video.file.present?, 'video-id': user_video.id })
+          = image_tag(user_video.file_url, class: 'user-asset video', data: { 'video-loaded': user_video.file_url.present?, 'video-id': user_video.id })
         
         - if user_video.user == current_user
           - if user_video.is_private
